gobmkida/c0/routine_to_string
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/routine_to_string/src/engine/printutils.c:841:24: error: use of undeclared identifier 'unk_4E39DD'
return ( const char *)&unk_4E39DD; 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/routine_to_string/src/engine/printutils.c:849:24: error: use of undeclared identifier 'unk_4E39FA'
return ( const char *)&unk_4E39FA; 
                       ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/routine_to_string/src/obj/1/printutils.o] Error 1
